[package]
name = "Cryptoanalysis-Lab3-Bondar_Kistaiev"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { version = "0.1.43", default-features = false }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[profile.release]
opt-level = 3
overflow-checks = false
panic = "abort"
lto = "fat"
codegen-units = 1
